media-tools/transmission/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: transmission
  namespace: media-tools
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
        name: transmission
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: server-type
                operator: In
                values:
                - nuc
      containers:
      - name: transmission
        image: linuxserver/transmission:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 500Mi
        livenessProbe:
          httpGet:
            path: /
            port: 9091
          initialDelaySeconds: 15
          periodSeconds: 120
        volumeMounts:
        - name: transmission-config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
      volumes:
        - name: transmission-config
          persistentVolumeClaim:
            claimName: longhorn-transmission-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: longhorn-media-downloads-pvc
      automountServiceAccountToken: false
