media-tools/transmission/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: transmission
  namespace: media-tools
spec:
  podSelector:
    matchLabels:
      app: transmission
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 36881
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector: {}
